--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,8 +53,7 @@
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 <uses-permission android:name="android.permission.SEND_SMS" />
-<uses-permission android:name="android.permission.RECEIVE_SMS" />
-<uses-permission android:name="android.permission.READ_SMS" />
+<uses-permission android:name="android.permission.CALL_PHONE" />
 
 
 
