--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
+    "@awesome-cordova-plugins/android-permissions": "^6.12.0",
+    "@awesome-cordova-plugins/call-number": "^6.12.0",
     "@awesome-cordova-plugins/core": "^6.12.0",
     "@awesome-cordova-plugins/sms": "^6.12.0",
     "@capacitor-community/contacts": "^6.1.1",
@@ -40,6 +42,8 @@
     "@ionic/angular": "^8.4.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "call-number": "^1.0.1",
+    "capacitor-call-number": "^1.0.3",
     "cordova-sms-plugin": "^1.0.4",
     "ionicons": "^7.0.0",
     "jeep-sqlite": "^2.8.0",
